--- a/index.html
+++ b/index.html
@@ -1,12 +1,223 @@
-<html>
-<head>
-<title>个人博客</title>
-</head>
-<body>
-<h1>
-个人博客
-</h1>
+<!DOCTYPE html>
+<!-- saved from url=(0182)file:///G:/%E7%A7%BB%E5%8A%A8%E4%BA%91%E7%AB%AF/%E5%AE%9A%E5%88%B6%E7%BD%91%E7%AB%99/%E8%89%BE%E9%92%BB/%E8%89%BE%E9%92%BB%E5%89%8D%E5%8F%B0%E6%A1%86%E6%9E%B6/%E8%89%BE%E9%92%BB.html -->
+<html class=" js no-flexbox canvas canvastext webgl no-touch geolocation postmessage websqldatabase indexeddb hashchange history draganddrop websockets rgba hsla multiplebgs backgroundsize borderimage borderradius boxshadow textshadow opacity cssanimations csscolumns cssgradients cssreflections csstransforms csstransforms3d csstransitions fontface generatedcontent video audio localstorage sessionstorage webworkers applicationcache svg inlinesvg smil svgclippaths js no-flexbox canvas canvastext webgl no-touch geolocation postmessage websqldatabase indexeddb hashchange history draganddrop websockets rgba hsla multiplebgs backgroundsize borderimage borderradius boxshadow textshadow opacity cssanimations csscolumns cssgradients cssreflections csstransforms csstransforms3d csstransitions fontface generatedcontent video audio localstorage sessionstorage webworkers applicationcache svg inlinesvg smil svgclippaths" lang="en" style="position: relative;"><!--<![endif]--><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+		<meta charset="utf-8">
+		<!-- Use the .htaccess and remove these lines to avoid edge case issues. More info: h5bp.com/i/378 -->
+		<!--<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"> -->
+		<title>艾钻</title>
+		<!-- Mobile viewport optimized: h5bp.com/viewport -->
+		<meta name="viewport" content="width=device-width">
+		<!-- Place favicon.ico and apple-touch-icon.png in the root directory: mathiasbynens.be/notes/touch-icons -->
+		<link rel="shortcut icon" type="image/x-icon" href="http://www.igcgroup.com/favicon.ico">
+		
+		<!-- More ideas for your <head> here: h5bp.com/d/head-Tips -->
+		<!-- All JavaScript at the bottom, except this Modernizr build.
+		Modernizr enables HTML5 elements & feature detects for optimal performance.
+		Create your own custom Modernizr build: www.modernizr.com/download/ -->
+		<script src="./index_files/modernizr-2.5.3.min.js"></script>
+	<link rel="STYLESHEET" type="text/css" href="./index_files/Styles_NN.css" media="all"><link rel="STYLESHEET" type="text/css" href="./index_files/Default.css" media="all"><title>IGC Group*, Belgian excellence in diamonds</title><meta name="description" content=""><meta name="keywords" content=""></head>
+	<body>
+		<!-- Prompt IE 6 users to install Chrome Frame. Remove this if you support IE 6.
+		   chromium.org/developers/how-tos/chrome-frame-getting-started -->
+		<!--[if lt IE 7]><p class=chromeframe>The browser you are currently using is not supported by igcgroup.com. <a href="http://browsehappy.com/">Please upgrade to a different browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">install Google Chrome Frame</a> to experience our website.</p><![endif]-->
+		<!-- CONTENT -->
+		<a name="top"> </a> 
+
+<div id="content" style="display: block;">
+	<div class="header">
+		<div class="ModuleHolderLeft"> 
+			<div class="aizuanlogo"><a href="./index.html" target="_top"><img src="./index_files/logo3.png" alt="" border="0"></a></div>
+		</div>
+		<div class="ModuleHolderLeft"> 
+			<div class="navget" align="left" style="opacity: 0.95;">
+
+				<a class="active" href="" target="_top">首页</a>
+			<span class="seperator"></span> 
+				<a href="" target="_top">关于艾钻</a>
+			<span class="seperator"></span> 
+				<a href="" target="_top">新闻</a>
+			<span class="seperator"></span> 
+				<a href="" target="_top">在线库存</a>
+			<span class="seperator"></span> 
+				<a href="" target="_top">客户服务</a>
+			<span class="seperator"></span> 
+				<a href="" target="_top">艾钻商城</a>
+			
+			</div>
+		</div>
+	<div class="ModuleHolderLeft"> 
+		<div class="language">
+			<a href="" target="cn">中文</a>
+			<a href="" target="en">英文</a>
+		</div>
+	</div>
+	<div class="ModuleHolderLeft"> 
+		<div class="threeblock">
+			<div class="threeblock1">
+				<div class="title">Some Features</div>
+				<div class="content">After pondering the diamond is the diamond, diamond is a natural mineral, is the original stone diamond. Simply put, diamonds deep in Earth's high-pressure,</div>
+			</div>
+			<div class="threeblock2">
+				<div class="title">Some History</div>
+				<div class="content">Although human civilization thousands of years of history, but an initial understanding of the diamond was found and only a few hundred years, </div>
+			</div>
+			<div class="threeblock3">
+				<div class="title">Some Quotes</div>
+				<div class="content">Prior to this, it's just fabulous with a religious worship and fear of the legend, while it as courage, power, status and dignity of the symbol. Today,</div>
+			</div>
+		</div>
+	</div>
+</div>
 
 
-</body>
-</html>
+<div class="main">
+
+
+<!-- shouye r-->
+<div class="Centerindex"><div class="PageTitle3">ZQ.JEWELRY Diamond profile </div><div class="ContentBlock"> 
+<p> <span class=""><img class="contentImage left" src="./index_files/aizuan2.png" align="left" height="159px" width="172px" vspace="0" hspace="9" unselectable="on">After pondering the diamond is the diamond, diamond is a natural mineral, is the original stone diamond. </span></p>
+<p> <span class=""> In simple terms, the diamond is a kind of form in the deep earth pressure, under the condition of high temperature carbon formed by the single crystal. </span></p>
+<p> <span class="">Although human civilization thousands of years of history, but they found and an initial understanding of the diamond is only a few hundred years, and really opened the mysteries of the diamond within a shorter time.</span></p>
+<hr>
+<p> Prior to this, it's just fabulous with a religious worship and fear of legend, while it as brave, noble symbol of power, status and. Today, diamonds are no longer mysterious, but not the only royal to enjoy the treasures. It has become the people who have, wearing popular gemstones.</p>
+
+<div class="ourdiamonds">
+		<div class="ourdiamondstitle">
+		OUR DIAMONDS
+		</div>
+		<div class="ourdiamondsgroup">
+			<div class="ourdiamonds-one">
+				<div class="imagecontent">
+					<img src="backgroundimage/ourdiamonds1.jpg"/>
+				</div>
+				<div class="imagetitle">
+					Diamond 1
+				</div>
+			</div>
+			<div class="ourdiamonds-one">
+				<div class="imagecontent">
+					<img src="backgroundimage/ourdiamonds2.jpg"/>
+				</div>
+				<div class="imagetitle">
+					Diamond 2
+				</div>
+			</div>
+			<div class="ourdiamonds-one">
+				<div class="imagecontent">
+					<img src="backgroundimage/ourdiamonds3.jpg"/>
+				</div>
+				<div class="imagetitle">
+					Diamond 3
+				</div>
+			</div>
+			<div class="ourdiamonds-one">
+				<div class="imagecontent">
+					<img src="backgroundimage/ourdiamonds4.jpg"/>
+				</div>
+				<div class="imagetitle">
+					Diamond 4
+				</div>
+			</div>
+
+		</div>
+
+	</div>
+
+</div>
+</div>
+
+<!--shouye left -->
+<div class="asideindex">
+	<div class="ContentBlock">
+		<div class="me-newsticker">
+		<div class="te-module">News &amp; Events</div>
+		
+		
+	
+		<div class="news">
+			<div class="wrapper" >   
+				<div class="newswrapper">
+					<div class="newsactivedate">2015/01/14</div>
+					<div class="newstitle"><a href="">“A diamond is forever”. Always in fashion, never go out of style, year in and year out. </a>
+					</div>
+				</div>
+				<div class="newswrapper">
+					<div class="newsactivedate">2015/01/14</div>
+					<div class="newstitle"><a href="">The jeweler scrutinized the diamond for flaws. </a>
+					</div>
+				</div>
+				<div class="newswrapper">
+					<div class="newsactivedate">2015/01/14</div>
+					<div class="newstitle"><a href="">Now let us consider crystals such as diamond or sapphire. </a>
+					</div>
+				</div>
+				<div class="newswrapper">
+					<div class="newsactivedate">2015/01/14</div>
+					<div class="newstitle"><a href="">The crown was beset with diamonds and jewels.  </a>
+					</div>
+				</div>
+				
+			</div>
+
+		</div>
+		</div>
+
+<!-- call us-->
+		<div class="call-us">
+		
+			<div class="te-module">CALL US</div>
+			<div class="tel">0755-8888888</div>
+		</div>
+		<p>&nbsp;</p>
+	</div>
+</div>
+
+
+</div>
+<div class="footer">
+<div class="ModuleHolderLeft"> 
+<div class="clearfix">
+	
+
+	
+	
+	<div class="cr-004">
+		<p>
+			&nbsp;Hoveniersstraat 2, Box 248 Room 708, 2018 Antwerp - Belgium, Tel.: +888888, Fax: +88 8888888, <a href="mailto:" target="_self">E-mail</a><br>
+			©&nbsp;2015&nbsp;aizuan nv/sa&nbsp;-&nbsp;Last updated:&nbsp;14 Jan 2015&nbsp;-&nbsp;<a href="mailto:webmaster@aizuan.com" target="_self">Contact the webmaster</a>&nbsp;-&nbsp;<a href="https://mailserver.aizuan.com/exchange/" target="_blank">Webmail</a>&nbsp;-&nbsp;<a href="http://www.aizuan.com/index.cfm?&PageID=20241" target="_self">Privacy policy</a>&nbsp;-&nbsp;<a href="http://www.edge.be/" target="_blank">Created by Edge.be</a>
+		</p>
+	</div>
+</div>
+</div></div> 
+</div> 
+		<!-- JavaScript at the bottom for fast page loading -->
+		<!-- Grab Google CDN's jQuery, with a protocol relative URL; fall back to local if offline -->
+		<!--<script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script> -->
+		<script src="./index_files/jquery-1.7.1.min.js"></script>
+		<script src="./index_files/jquery-1.7.1.min(1).js"></script>
+		<!-- scripts concatenated and minified via build script -->
+		<script src="./index_files/plugins.js"></script>
+		<script src="./index_files/video.js"></script>
+		<script src="./index_files/script.js"></script>
+		
+		
+		<noscript>&amp;lt;style type="text/css"&amp;gt;#content {display:block;}&amp;lt;/style&amp;gt;</noscript>
+		<!-- end scripts -->
+	
+
+<!-- start writing analytics -->
+<!-- // google analytics v2 -->
+<script type="text/javascript">
+var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+</script><script src="./index_files/ga.js" type="text/javascript"></script><script src="./index_files/ga(1).js" type="text/javascript"></script>
+
+<script type="text/javascript">
+try{
+var pageTracker1 = _gat._getTracker("UA-271345-12");
+pageTracker1._trackPageview();
+} catch(err) {}
+</script>
+
+<!-- // end google analytics v2 -->
+		<div id="lean_overlay"></div><div id="lean_overlay"></div></body></html>
